# msgbroker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  mb_config.h.in  msgbroker.pc.in  notes.html
.github/workflows/: ci.yml
examples/: CMakeLists.txt  cluster_demo.c  pair_demo.c  pipeline_demo.c  pubsub_demo.c  reqrep_demo.c
include/msgbroker/: mb.h  mb_bus.h  mb_cluster.h  mb_inproc.h  mb_ipc.h  mb_pair.h  mb_pipeline.h  mb_pubsub.h  mb_reqrep.h  mb_survey.h  mb_tcp.h  mb_tls.h  mb_ws.h  mb_wss.h
perf/: CMakeLists.txt  inproc_lat.c  inproc_thr.c  tcp_lat.c  tcp_thr.c
src/: protocol.h  transport.h
src/aio/: coroutine.c  coroutine.h  ctx.c  ctx.h  evloop.c  evloop.h  fsm.c  fsm.h  pool.c  pool.h  threadpool.c  threadpool.h  timer.c  timer.h  timerset.c  timerset.h  worker.c  worker.h
src/core/: device.c  ep.c  ep.h  global.c  global.h  pipe.c  pipe.h  poll.c  sock.c  sock.h
src/distributed/: cluster.c  cluster.h  discovery.c  discovery.h  gossip.c  gossip.h  protocol.c  protocol.h  ring.c  ring.h  routing.c  routing.h
src/memory/: arena.c  arena.h  chunk.c  chunk.h  chunkref.c  chunkref.h  msg.c  msg.h  pool.c  pool.h  slab.c  slab.h
src/pal/: atomic.h  clock.c  clock.h  condvar.c  condvar.h  efd.c  efd.h  mutex.c  mutex.h  semaphore.c  semaphore.h  sleep.c  sleep.h  thread.c  thread.h
src/protocol/: sockbase.c
src/protocol/bus/: bus.c  xbus.c
src/protocol/pair/: pair.c  xpair.c
src/protocol/pipeline/: pull.c  push.c  xpull.c  xpush.c
src/protocol/pubsub/: pub.c  sub.c  xpub.c  xsub.c
src/protocol/reqrep/: rep.c  req.c  xrep.c  xreq.c
src/protocol/survey/: respondent.c  surveyor.c  xrespondent.c  xsurveyor.c
src/transport/inproc/: binproc.h  cinproc.h  inproc.c  inproc_binproc.c  inproc_cinproc.c  ins.c  ins.h  msgqueue.c  msgqueue.h  sinproc.c  sinproc.h
src/transport/ipc/: bipc.c  bipc.h  cipc.c  cipc.h  ipc.c  ipc_aipc.c  sipc.c  sipc.h
src/transport/tcp/: btcp.c  btcp.h  ctcp.c  ctcp.h  tcp.c  tcp_atcp.c
src/transport/tls/: btls.c  btls.h  ctls.c  ctls.h  stls.c  stls.h  tls.c
src/transport/ws/: bws.c  bws.h  bwss.c  bwss.h  cws.c  cws.h  cwss.c  sws.c  sws.h  ws.c  ws.h  ws_handshake.c  wss.c
src/utils/: alloc.c  alloc.h  cont.h  err.c  err.h  fast.h  fq.c  fq.h  hash.c  hash.h  lb.c  lb.h  list.c  list.h  net.c  net.h  queue.c  queue.h  random.c  random.h  trie.c  trie.h  wire.h
tests/: CMakeLists.txt
tests/benchmark/: baseline.txt  run_benchmarks.sh
tests/fuzz/: fuzz_msgqueue.c  fuzz_sipc.c  fuzz_ws_frame.c
tests/unit/: test_arena.c  test_atomic.c  test_chunk.c  test_clock.c  test_cmsg.c  test_condvar.c  test_coro_io.c  test_coroutine.c  test_device.c  test_distributed.c  test_efd.c  test_endpoint.c  test_evloop.c  test_fsm.c  test_global.c  test_hash.c  test_inproc.c  test_ipc.c  test_ipv6_dns.c  test_list.c  test_msg.c  test_msgqueue.c  test_mutex.c  test_pipe.c  test_pipeline.c  test_poll.c  test_pool.c  test_protocols.c  test_pubsub_filter.c  test_queue.c  test_reconnect.c  test_reconnect_disc.c  test_reqrep.c  test_semaphore.c  test_sendmsg.c  test_slab.c  test_socket.c  test_stats.c  test_strerror.c  test_tcp.c  (+10 more)
