cmake_minimum_required(VERSION 3.10)

file(GLOB MB_EXAMPLE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
foreach(EXAMPLE_SRC ${MB_EXAMPLE_SOURCES})
    get_filename_component(EXAMPLE_NAME ${EXAMPLE_SRC} NAME_WE)
    add_executable(${EXAMPLE_NAME} ${EXAMPLE_SRC})
    target_link_libraries(${EXAMPLE_NAME} PRIVATE msgbroker_static msgbroker_headers)
    if(UNIX)
        target_link_libraries(${EXAMPLE_NAME} PRIVATE pthread)
    endif()
    if(UNIX AND NOT APPLE)
        target_link_libraries(${EXAMPLE_NAME} PRIVATE uring)
    endif()
endforeach()
