cmake_minimum_required(VERSION 3.10)

file(GLOB MB_PERF_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
foreach(PERF_SRC ${MB_PERF_SOURCES})
    get_filename_component(PERF_NAME ${PERF_SRC} NAME_WE)
    add_executable(${PERF_NAME} ${PERF_SRC})
    target_link_libraries(${PERF_NAME} PRIVATE msgbroker_static msgbroker_headers)
    if(UNIX)
        target_link_libraries(${PERF_NAME} PRIVATE pthread)
    endif()
    if(UNIX AND NOT APPLE)
        target_link_libraries(${PERF_NAME} PRIVATE uring)
    endif()
endforeach()
